add option to use authn devices for extra security resetting the pasword

--- a/src/eduid_webapp/security/views/templates/reset_password_extra_security.jinja2
+++ b/src/eduid_webapp/security/views/templates/reset_password_extra_security.jinja2
@@ -30,6 +30,22 @@
             </div>
         {% endfor %}
     {% endif %}
+    {% if alternative == "tokens" %}
+        {% for name in data %}
+            <div class="row">
+                <form class="form" method="post" action="{{ view_context.action }}">
+                    <input type="hidden" id="csrf" name="csrf" value="{{ view_context.csrf_token }}">
+                    <input type="hidden" id="token_{{loop.index0}}" name="token_index" value="{{loop.index0}}">
+                    <div class="form-group">
+                        <div>
+                            <button type="submit" class="btn btn-default">{%
+                                trans %}Verify {% endtrans %} {{ name }}</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        {% endfor %}
+    {% endif %}
 {% endfor %}
 <div class="row">
     <form class="form" method="post" action="{{ view_context.action }}">
