--- a/src/eduid_webapp/security/views/templates/reset_password_extra_security.jinja2
+++ b/src/eduid_webapp/security/views/templates/reset_password_extra_security.jinja2
@@ -38,8 +38,7 @@
                     <input type="hidden" id="token_{{loop.index0}}" name="token_index" value="{{loop.index0}}">
                     <div class="form-group">
                         <div>
-                            <button type="submit" class="btn btn-default">{%
-                                trans %}Verify {% endtrans %} {{ name }}</button>
+                            <button type="submit" class="btn btn-default">{% trans %}Verify with your {{ name }} security key {% endtrans %}</button>
                         </div>
                     </div>
                 </form>
