--- a/src/eduid_webapp/jsconfig/templates/load_bundle.jinja2
+++ b/src/eduid_webapp/jsconfig/templates/load_bundle.jinja2
@@ -12,6 +12,6 @@
      You need to enable JavaScript to run this app.
    </noscript>
    <div id="root" class="wrap container"></div>
-   <script type="text/javascript" src="{{ bundle_url }}"></script>
+   <script type="text/javascript" src="{{ static_url_for(context.bundle, context.version) }}"></script>
  </body>
 </html>
